// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnFill renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-fill: 0;
  column-fill: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 0;
  column-fill: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 0;
  column-fill: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 0;
  column-fill: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders function 1`] = `
Array [
  .c0 {
  -webkit-column-fill: hasnot;
  column-fill: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: has;
  column-fill: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: hasnot;
  column-fill: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: has;
  column-fill: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-fill: invalid.path.1;
  column-fill: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: invalid.path.1;
  column-fill: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: invalid.path.1;
  column-fill: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: invalid.path.1;
  column-fill: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-fill: -54881;
  column-fill: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: -54881;
  column-fill: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: -42365;
  column-fill: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: -42365;
  column-fill: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: July;
    column-fill: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: September;
    column-fill: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: July;
    column-fill: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: September;
    column-fill: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: May;
    column-fill: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: June;
    column-fill: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: April;
    column-fill: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: May;
    column-fill: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: June;
    column-fill: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-fill: April;
    column-fill: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-fill: July;
    column-fill: July;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media January {
  .c0 {
    -webkit-column-fill: September;
    column-fill: September;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

@media June {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-fill: July;
    column-fill: July;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media January {
  .c0 {
    -webkit-column-fill: September;
    column-fill: September;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: November;
    column-fill: November;
  }
}

@media June {
  .c0 {
    -webkit-column-fill: August;
    column-fill: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-fill: January;
    column-fill: January;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: December;
    column-fill: December;
  }
}

@media January {
  .c0 {
    -webkit-column-fill: April;
    column-fill: April;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: May;
    column-fill: May;
  }
}

@media June {
  .c0 {
    -webkit-column-fill: June;
    column-fill: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-fill: January;
    column-fill: January;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: December;
    column-fill: December;
  }
}

@media January {
  .c0 {
    -webkit-column-fill: April;
    column-fill: April;
  }
}

@media April {
  .c0 {
    -webkit-column-fill: May;
    column-fill: May;
  }
}

@media June {
  .c0 {
    -webkit-column-fill: June;
    column-fill: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-fill: 54881;
  column-fill: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 54881;
  column-fill: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 42365;
  column-fill: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: 42365;
  column-fill: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders string 1`] = `
Array [
  .c0 {
  -webkit-column-fill: July;
  column-fill: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: July;
  column-fill: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: June;
  column-fill: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: June;
  column-fill: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnFill renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-fill: DarkSlateBlue;
  column-fill: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: DarkSlateBlue;
  column-fill: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: DarkSlateBlue;
  column-fill: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-fill: DarkSlateBlue;
  column-fill: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
